--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="/medical-book.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-introductions.html">Introductions <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/mb-introductions.html">Introductions</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-complaints.html">Complaints</a>
+                    <a class="nav-link" href="/mb-complaints.html">Complaints</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/medical-book/mb-medications.html">Medications</a>
+                      <a class="nav-link" href="/mb-medications.html">Medications</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-history.html">History</a>
+                    <a class="nav-link" href="/mb-history.html">History</a>
                 </li>
             </div>
           </div>
@@ -55,22 +55,22 @@
     <div class="container">
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/medical-book/mb-introductions.html">Introductions</a>
+          <a href="/mb-introductions.html">Introductions</a>
         </div>
       </div>
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/medical-book/mb-complaints.html">Complaints</a>
+          <a href="/mb-complaints.html">Complaints</a>
         </div>
       </div>
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/medical-book/mb-medications.html">Medications</a>
+          <a href="/mb-medications.html">Medications</a>
         </div>
       </div>
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/medical-book/mb-history.html">History</a>
+          <a href="/mb-history.html">History</a>
         </div>
       </div>
 
