modify header url again

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                     <a class="nav-link" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mb-introductions.html">Introductions</a>
+                    <a class="nav-link" href="/medical-book/mb-introductions.html">Introductions</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mb-complaints.html">Complaints</a>
+                    <a class="nav-link" href="/medical-book/mb-complaints.html">Complaints</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/mb-medications.html">Medications</a>
+                      <a class="nav-link" href="/medical-book/mb-medications.html">Medications</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mb-history.html">History</a>
+                    <a class="nav-link" href="/medical-book/mb-history.html">History</a>
                 </li>
             </div>
           </div>
@@ -55,22 +55,22 @@
     <div class="container">
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/mb-introductions.html">Introductions</a>
+          <a href="/medical-book/mb-introductions.html">Introductions</a>
         </div>
       </div>
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/mb-complaints.html">Complaints</a>
+          <a href="/medical-book/mb-complaints.html">Complaints</a>
         </div>
       </div>
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/mb-medications.html">Medications</a>
+          <a href="/medical-book/mb-medications.html">Medications</a>
         </div>
       </div>
       <div class="row">
         <div class="col text-center" style="font-size:2em; ">
-          <a href="/mb-history.html">History</a>
+          <a href="/medical-book/mb-history.html">History</a>
         </div>
       </div>
 
