--- a/medical-book/mb-complaints.html
+++ b/medical-book/mb-complaints.html
@@ -34,16 +34,16 @@
                     <a class="nav-link" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mb-introductions.html">Introductions</a>
+                    <a class="nav-link" href="/medical-book/mb-introductions.html">Introductions</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mb-complaints.html">Complaints</a>
+                    <a class="nav-link" href="/medical-book/mb-complaints.html">Complaints</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="/mb-medications.html">Medications</a>
+                      <a class="nav-link" href="/medical-book/mb-medications.html">Medications</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/mb-history.html">History</a>
+                    <a class="nav-link" href="/medical-book/mb-history.html">History</a>
                 </li>
             </div>
           </div>
