--- a/medical-book/mb-history.html
+++ b/medical-book/mb-history.html
@@ -20,7 +20,7 @@
     </head>
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light">
         <div class="container">
-          <a href="/medical-book.html" class="navbar-brand">Cantonese Medical Book Prototype</a>
+          <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
       
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
                   aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
