--- a/medical-book/mb-complaints.html
+++ b/medical-book/mb-complaints.html
@@ -20,7 +20,7 @@
         <title>Medical Book</title>
     </head>
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light">
-        <div class="container">
+        <div class="container-md">
           <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
       
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
@@ -53,7 +53,7 @@
     </nav>      
       
     <body>
-      <div class="container">
+      <div class="container-md">
         <div class="row">
             <div class="col text-center">
               Complaints            
