trying xl instead of md

--- a/medical-book/mb-introductions.html
+++ b/medical-book/mb-introductions.html
@@ -21,7 +21,7 @@
         <title>Medical Book</title>
     </head>
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light">
-        <div class="container-md">
+        <div class="container-xl">
           <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
       
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
@@ -44,7 +44,7 @@
       
     <body>
 
-    <div class="container-md">
+    <div class="container-xl">
 
         <div class="row">
           <div class="col text-center">
