--- a/index.html
+++ b/index.html
@@ -7,58 +7,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/mark.min.js" integrity="sha512-5CYOlHXGh6QpOFA/TeTylKLWfB3ftPsde7AnmhuitiTX4K5SqCLBeKro6sPS8ilsz1Q4NRx3v8Ko2IBiszzdww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="search.js"></script>
 
-    <style>
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
-    <head>
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-        <link rel="manifest" href="/assets/img/site.webmanifest">
-        <meta content="Home Page" name="@badinkajink">
-        <title>Medical Book</title>
-    </head>
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light">
-        <div class="container">
-          <a href="/medical-book.html" class="navbar-brand">Cantonese Medical Book Prototype</a>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
-                  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-introductions.html">Introductions</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-complaints.html">Complaints</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="/medical-book/mb-medications.html">Medications</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-history.html">History</a>
-                </li>
-            </div>
-          </div>
-
-          <div>
-            <!-- <form id="target" action="/search_results"> -->
-              <input type="text" class="box" id="sb" placeholder="search a medical term or phrase">
-              <input type="submit" class="btn-primary" onclick="search()" value="Search">
-            <!-- </form> -->
-            </div>
-        
-        </div>
-    </nav>      
+    <script> 
+      $(function(){
+        $("#includedContent").load("medical-book/mb-header.html"); 
+      });
+    </script> 
+  
+    <div id="includedContent"></div>   
       
     <body>
     <div class="container">
