update home page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
           <a href="/medical-book/mb-history.html">History</a>
         </div>
       </div>
-
+      <div class="row">
+        <div class="col text-center" style="font-size:2em; ">
+          <a href="/medical-book/mb-prior-illnesses.html">Prior Illnesses</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center" style="font-size:2em; ">
+          <a href="/medical-book/mb-cardiology.html">Cardiology</a>
+        </div>
+      </div>
     </div>
     </body>
 </html>
