update header with cardiology

--- a/medical-book/mb-header.html
+++ b/medical-book/mb-header.html
@@ -44,6 +44,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/medical-book/mb-prior-illnesses.html">Prior Illnesses</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/medical-book/mb-cardiology.html">Cardiology</a>
+                </li>
             </div>
         </div>
         
