downgrade to bootstrap 4, add dropdown menu for anatomy, add non-functioning search, downsize container from xl to normal

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
           <a href="/medical-book/mb-cardiology.html">Cardiology</a>
         </div>
       </div>
+      <div class="row">
+        <div class="col text-center" style="font-size:2em; ">
+          <a href="/medical-book/mb-anatomy.html">Anatomy</a>
+        </div>
+      </div>
     </div>
     </body>
 </html>
