--- a/medical-book/mb-header.html
+++ b/medical-book/mb-header.html
@@ -4,6 +4,14 @@
         max-width: 100%;
         height: auto;
     }
+
+    search {
+        padding: 5px;
+    }
+
+    /* .box {
+        border-radius: 5px;
+    } */
 </style>
 
 <head>
@@ -15,50 +23,71 @@
     <title>Medical Book</title>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light">
-    <div class="container-xl">
-        <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
+<script>
+    $(document).ready(function () {
+        // Ensure that collapsed items are toggled properly
+        $('.nav-link').on('click', function () {
+            if ($(this).hasClass('collapsed')) {
+                $($(this).attr('href')).collapse('show');
+            }
+        });
+    });
+</script>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<div class="container-xl">
+<!-- <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light justify-content-between"> -->
+<nav class="navbar navbar-expand-xl navbar-light bg-light justify-content-between">
+    <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
 
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-introductions.html">Introductions</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-complaints.html">Complaints</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-medications.html">Medications</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-history.html">History</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-prior-illnesses.html">Prior Illnesses</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/medical-book/mb-cardiology.html">Cardiology</a>
-                </li>
-            </div>
-        </div>
-        
-        <!-- Search Does Not Work Yet -->
-        <!-- <div>
-        <form id="target" action="/search_results">
-          <input type="text" class="box" id="sb" placeholder="search a medical term or phrase">
-          <input type="submit" class="btn-primary" onclick="search()" value="Search">
-        </form>
-        </div> -->
-    
-    </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-    </div>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav ">
+            <!-- <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="/medical-book/mb-introductions.html">Introductions</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/medical-book/mb-complaints.html">Complaints</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/medical-book/mb-medications.html">Medications</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/medical-book/mb-history.html">History</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/medical-book/mb-prior-illnesses.html">Illnesses</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/medical-book/mb-cardiology.html">Cardiology</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  More
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="/medical-book/mb-anatomy.html">Anatomy</a>
+                  <a><hr class="dropdown-divider"></a>
+                  <a class="dropdown-item" href="#">Placeholder</a>
+                </div>
+              </li>        
+            <!-- Search Does Not Work Yet -->
+            <!-- <form class="form-inline my-2 my-lg-0" id="target" action="/search_results">
+                <input type="text" class="box" id="sb" placeholder="search a medical term or phrase">
+                <input type="submit" class="btn-primary search" style="padding-left: 5px;" onclick="search()" value="Search">
+            </form> -->
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="search a medical term or phrase" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+        </ul>
+    </div>        
+
 </nav> 
+</div>
