--- a/medical-book/mb-header.html
+++ b/medical-book/mb-header.html
@@ -34,21 +34,15 @@
     });
 </script>
 
-<div class="container-xl">
-<!-- <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light justify-content-between"> -->
-<nav class="navbar navbar-expand-xl navbar-light bg-light justify-content-between">
-    <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<!-- <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light justify-content-between"> --> 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav ">
-            <!-- <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-            </li> -->
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
                 <a class="nav-link" href="/medical-book/mb-introductions.html">Introductions</a>
             </li>
@@ -67,27 +61,23 @@
             <li class="nav-item">
                 <a class="nav-link" href="/medical-book/mb-cardiology.html">Cardiology</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  More
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="/medical-book/mb-anatomy.html">Anatomy</a>
-                  <a><hr class="dropdown-divider"></a>
-                  <a class="dropdown-item" href="#">Placeholder</a>
-                </div>
-              </li>        
-            <!-- Search Does Not Work Yet -->
-            <!-- <form class="form-inline my-2 my-lg-0" id="target" action="/search_results">
-                <input type="text" class="box" id="sb" placeholder="search a medical term or phrase">
-                <input type="submit" class="btn-primary search" style="padding-left: 5px;" onclick="search()" value="Search">
-            </form> -->
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="search a medical term or phrase" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-        </ul>
-    </div>        
 
-</nav> 
-</div>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/medical-book/mb-anatomy.html">Anatomy</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="medical term or phrase" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
