italicize and change dropdown to see more

--- a/medical-book/mb-header.html
+++ b/medical-book/mb-header.html
@@ -64,12 +64,12 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              <i>See More</i>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/medical-book/mb-anatomy.html">Anatomy</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">Placeholder</a></li>
             </ul>
           </li>
 
