--- a/medical-book/mb-history.html
+++ b/medical-book/mb-history.html
@@ -11,7 +11,9 @@
       });
     </script> 
   
-     
+  <head>
+    <title id="title">History</title>
+  </head>
       
     <body>
     <div id="includedContent"></div>   
