--- a/medical-book/mb-introductions.html
+++ b/medical-book/mb-introductions.html
@@ -12,7 +12,10 @@
       });
     </script> 
   
-      
+  <head>
+    <title id="title">Introductions</title>
+  </head>
+
     <body>
     <div id="includedContent"></div>       
     <div class="container-md">
