--- a/medical-book/mb-medications.html
+++ b/medical-book/mb-medications.html
@@ -11,7 +11,11 @@
         $("#includedContent").load("mb-header.html"); 
       });
     </script> 
-        
+
+          <head>
+            <title id="title">Medications</title>
+          </head>
+
     <body>
       <div id="includedContent"></div>   
 
