--- a/medical-book/mb-anatomy.html
+++ b/medical-book/mb-anatomy.html
@@ -12,7 +12,10 @@
       });
     </script> 
   
-      
+  <head>
+    <title id="title">Anatomy</title>
+  </head>
+
     <body>
       <div id="includedContent"></div>   
 
