adding emergency section

--- a/medical-book/mb-emergency.html
+++ b/medical-book/mb-emergency.html
@@ -13,7 +13,7 @@
     </script> 
   
   <head>
-    <title id="title">Anatomy</title>
+    <title id="title">Emergency</title>
   </head>
 
     <body>
@@ -22,13 +22,13 @@
       <div class="container-md">
         <div class="row">
             <div class="col text-center">
-              Anatomy           
+              Emergency           
             </div>
           </div>  
 
         <script src="data_loader.js"></script>
-        <script>load_data("anatomy")</script>
-        <div id="anatomy">
+        <script>load_data("emergency")</script>
+        <div id="emergency">
         </div>    
 
       </div>    
