adding dermatology section

--- a/medical-book/mb-header.html
+++ b/medical-book/mb-header.html
@@ -69,6 +69,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/medical-book/mb-anatomy.html">Anatomy</a></li>
               <li><a class="dropdown-item" href="/medical-book/mb-emergency.html">Emergency</a></li>
+              <li><a class="dropdown-item" href="/medical-book/mb-dermatology.html">Dermatology</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Placeholder</a></li>
             </ul>
