--- a/medical-book/mb-gastroenterology.html
+++ b/medical-book/mb-gastroenterology.html
@@ -13,7 +13,7 @@
     </script> 
   
   <head>
-    <title id="title">gastroenterology</title>
+    <title id="title">Gastroenterology</title>
   </head>
 
     <body>
@@ -22,7 +22,7 @@
       <div class="container-md">
         <div class="row">
             <div class="col text-center">
-              gastroenterology           
+              Gastroenterology           
             </div>
           </div>  
 
