adding endocrinology section

--- a/medical-book/mb-header.html
+++ b/medical-book/mb-header.html
@@ -70,6 +70,7 @@
               <li><a class="dropdown-item" href="/medical-book/mb-anatomy.html">Anatomy</a></li>
               <li><a class="dropdown-item" href="/medical-book/mb-emergency.html">Emergency</a></li>
               <li><a class="dropdown-item" href="/medical-book/mb-dermatology.html">Dermatology</a></li>
+              <li><a class="dropdown-item" href="/medical-book/mb-endocrinology.html">Endocrinology</a></li>
               <li><a class="dropdown-item" href="/medical-book/mb-gastroenterology.html">Gastroenterology</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Placeholder</a></li>
