--- a/medical-book/mb-anatomy.html
+++ b/medical-book/mb-anatomy.html
@@ -1,36 +1,73 @@
-<html>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  
-    <script> 
-      $(function(){
-        $("#includedContent").load("mb-header.html"); 
-      });
-    </script> 
-  
-  <head>
-    <title id="title">Anatomy</title>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anatomy - Cantonese Medical Handbook</title>
 
-    <body>
-      <div id="includedContent"></div>   
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-      <div class="container-md">
-        <div class="row">
-            <div class="col text-center">
-              Anatomy           
+    <!-- Common Styles -->
+    <link rel="stylesheet" href="common-styles.css">
+</head>
+<body>
+    <!-- Skip to content for accessibility -->
+    <a href="#main-content" class="skip-to-content">Skip to content</a>
+
+    <!-- Load navbar -->
+    <div id="includedContent"></div>
+
+    <!-- Page Header -->
+    <div class="page-header">
+        <div class="container">
+            <h1>Anatomy</h1>
+            <p>Body Parts and Anatomical Terms</p>
+        </div>
+    </div>
+
+    <!-- Main Content -->
+    <main id="main-content">
+        <div class="container-md">
+            <div id="anatomy">
+                <!-- Loading state -->
+                <div class="loading">
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <p class="mt-3">Loading phrases...</p>
+                </div>
             </div>
-          </div>  
+        </div>
+    </main>
 
-        <script src="data_loader.js"></script>
-        <script>load_data("anatomy")</script>
-        <div id="anatomy">
-        </div>    
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
-      </div>    
-    </body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Load navbar -->
+    <script>
+        $(function() {
+            $("#includedContent").load("mb-header.html");
+        });
+    </script>
+
+    <!-- Data Loader -->
+    <script src="data_loader.js"></script>
+    <script>
+        // Load data when page is ready
+        load_data("anatomy")
+            .then(() => {
+                console.log('Anatomy loaded successfully');
+            })
+            .catch(err => {
+                console.error('Failed to load Anatomy:', err);
+            });
+    </script>
+
+    <!-- Keyboard Shortcuts -->
+    <script src="keyboard-shortcuts.js"></script>
+</body>
 </html>
