--- a/medical-book/mb-history.html
+++ b/medical-book/mb-history.html
@@ -1,44 +1,86 @@
-<html>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  
-    <script> 
-      $(function(){
-        $("#includedContent").load("mb-header.html"); 
-      });
-    </script> 
-  
-  <head>
-    <title id="title">History</title>
-  </head>
-      
-    <body>
-    <div id="includedContent"></div>   
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Medical History - Cantonese Medical Handbook</title>
 
-    <div class="container-md">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-      <div class="row">
-        <div class="col text-center">
-          Pertinent History Questions
+    <!-- Common Styles -->
+    <link rel="stylesheet" href="common-styles.css">
+</head>
+<body>
+    <!-- Skip to content for accessibility -->
+    <a href="#main-content" class="skip-to-content">Skip to content</a>
+
+    <!-- Load navbar -->
+    <div id="includedContent"></div>
+
+    <!-- Page Header -->
+    <div class="page-header">
+        <div class="container">
+            <h1>Medical History</h1>
+            <p>History Questions and Family History</p>
         </div>
-      </div> 
-      <script src="data_loader.js"></script>
-      <script>load_data("history_questions")</script>
-      <div id="history_questions">
-      </div>
-
-      <div class="row">
-        <div class="col text-center">
-          Family History
-        </div>
-      </div> 
-      <script>load_data("family_history")</script>
-      <div id="family_history">
-      </div>
-
     </div>
-    </body>
+
+    <!-- Main Content -->
+    <main id="main-content">
+        <div class="container-md">
+            <div id="history_questions">
+                <!-- Loading state -->
+                <div class="loading">
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <p class="mt-3">Loading phrases...</p>
+                </div>
+            </div>
+
+            <div id="family_history">
+                <!-- Loading state -->
+                <div class="loading">
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <p class="mt-3">Loading phrases...</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Load navbar -->
+    <script>
+        $(function() {
+            $("#includedContent").load("mb-header.html");
+        });
+    </script>
+
+    <!-- Data Loader -->
+    <script src="data_loader.js"></script>
+    <script>
+        // Load data when page is ready
+        load_data("history_questions").then(() => {
+            console.log("${s} loaded");
+            return         load_data("family_history")
+        })
+            .then(() => {
+                console.log('Medical History loaded successfully');
+            })
+            .catch(err => {
+                console.error('Failed to load Medical History:', err);
+            });
+    </script>
+
+    <!-- Keyboard Shortcuts -->
+    <script src="keyboard-shortcuts.js"></script>
+</body>
 </html>
