--- a/medical-book/mb-header.html
+++ b/medical-book/mb-header.html
@@ -37,7 +37,7 @@
 <!-- <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light justify-content-between"> --> 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a href="/" class="navbar-brand">Cantonese Medical Book Prototype</a>
+      <a href="/" class="navbar-brand">Cantonese Medical Book</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
